2003-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-week-view-event-item.c (e_week_view_event_item_draw): draw
	a filled rectangle and a black border around it for one-day events.

	* gui/e-day-view-top-item.c (e_day_view_top_item_draw_long_event):
	fill the rectangle for the item with its associated color.

2003-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.c (gnome_calendar_open): unref the client if there
	is an error.
	(update_query): set status bar messages for progress.
	(update_query_timeout): re-enabled.
	(client_cal_opened_cb): install timeout handler for the query updates.

	* gui/e-cal-view.c (e_cal_view_set_model): connect to all appropriate
	signals on the model, to be called for every change.
	(model_row_changed_cb, model_rows_changed_cb): new model callbacks.

	* gui/e-week-view-event-item.c (e_week_view_event_item_draw): colorize
	the background for multiple days events.

2003-08-12  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c (e_day_view_update_query):
	* gui/e-week-view.c (e_week_view_update_query): remove the status bar
	messages when the operation is finished.

	* gui/e-day-view-main-item.c (e_day_view_main_item_draw_day_event):
	draw a rectangle filled with the color associated with the event's
	calendar.

2003-08-12  Rodrigo Moya <rodrigo@ximian.com>

	* cal-util/cal-util.[ch] (cal_util_component_has_alarms): new function.

	* gui/gnome-cal.[ch]:
	* gui/goto.c:
	* gui/itip-bonobo-control.c:
	* gui/print.c:
	* gui/e-week-view.[ch]:
	* gui/e-day-view.[ch]: lots of fixes to make all compile with no
	warnings.

2003-08-12  Rodrigo Moya <rodrigo@ximian.com>

	* cal-util/cal-util.[ch] (cal_util_component_has_organizer):
	new function.

	* gui/e-day-view-main-item.c:
	* gui/e-day-view-top-item.c:
	* gui/e-week-view-event-item.c:
	* gui/e-week-view.c: adaptated to changes in ECalViewEvent.

	* gui/e-cal-model.[ch] (e_cal_model_get_client_list): new function.
	(ecm_append_row): fixed usage of icalcomponent variable.
