@@ -1,5 +1,9 @@
 2003-08-13  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/e-cal-model.c (ecm_get_color_for_component): assign the colors
+	based on the URI, which is stored in a common place for all models.
+	Thus different views will use the same color for the same calendar.
+
 	* gui/e-week-view-event-item.c (e_week_view_event_item_draw): draw
 	a filled rectangle and a black border around it for one-day events.
 
